Bug 1702154 - Stop URL popup from overlapping policy links. r=emalysz, a=RyanVM
Differential Revision: https://phabricator.services.mozilla.com/D112833

--- a/browser/components/enterprisepolicies/content/aboutPolicies.css
+++ b/browser/components/enterprisepolicies/content/aboutPolicies.css
@@ -48,6 +48,7 @@ body {
 
 .main-content {
   flex: 1;
+  scroll-padding: 25px;
 }
 
 .tab {
